bug fix: character sizing block flickering & first scene deleteing problem

--- a/client/src/components/views/Scene/SceneMakePage/SceneMakePage2.css
+++ b/client/src/components/views/Scene/SceneMakePage/SceneMakePage2.css
@@ -186,8 +186,8 @@
     width: 17px;
     height: 17px;
     border-radius: 8px;
-    background-color: #fff;
-    border: 1px solid rgba(70, 70, 70, 0.26);
+    background-color: rgba(255, 255, 255, 0);
+    border: 1px solid rgba(70, 70, 70, 0);
 }
 
 
